# onyx

./: Cargo.toml  README.md  install.sh  version.txt
.github/workflows/: main.yml  release.yml
profiles/: balanced.toml  bounded.toml  brick.toml  cinderblock.toml  limited.toml  performant.toml  potato.toml
src/: box.rs  cpu.rs  doctor.rs  help.rs  helpers.rs  main.rs  normalize.rs  profile.rs  tar.rs  update.rs
src/lux/: ext.rs  mod.rs
