[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "3.1.4"
time-format = "1.2.2"
tar = "0.4"
zstd = "0.12"
indicatif = "0.18.3"
once_cell = "1.21.3"
nix = { version = "0.31.1", features = ["sched", "mount", "user"] }
dir-size = "0.1.1"
anyhow = "1.0"
flate2 = "1.0"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gpt_disk_io = "0.16.2"
iso9660-rs = { version = "1.0.2", features = ["rock-ridge", "joliet"] }

[profile.release]
opt-level = "z"     # Optimize for size ('s' or 'z')
debug = false
lto = "fat"          # Enable Link Time Optimization (fat LTO for best size)
codegen-units = 1   # Reduce parallel code generation for better optimization
panic = "abort"     # Remove stack unwinding code (saves ~10% size)
overflow-checks = false
incremental = false
strip = true        # Automatically strip symbols (same as running `strip` command)
