[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "3.1.4"
time-format = "1.2.2"
tar = "0.4"
zstd = "0.12"
indicatif = "0.18.3"
once_cell = "1.21.3"
nix = { version = "0.31.1", features = ["sched", "mount", "user"] }
dir-size = "0.1.1"

[profile.release]
opt-level = "z"     # Optimize for size ('s' or 'z')
debug = false
lto = "fat"          # Enable Link Time Optimization (fat LTO for best size)
codegen-units = 1   # Reduce parallel code generation for better optimization
panic = "abort"     # Remove stack unwinding code (saves ~10% size)
overflow-checks = false
incremental = false
strip = true        # Automatically strip symbols (same as running `strip` command)
